wire up react with node

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
-    <title>React App!</title>
+    <meta-charset='utf-8'>
+    <title>Docker Compose GUI</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="webpack-bundle.js"></script>
+    <div id="root">
+
+    </div>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
