--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta-charset='utf-8'>
     <title>Docker Compose GUI</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
     <div id="root">
