fixed body styling and control styling, added stop button

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,15 @@
     <meta-charset='utf-8'>
     <title>Docker Compose GUI</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
