--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,21 @@
 <html>
-  <head>
-    <meta-charset='utf-8'>
+
+<head>
+  <meta-charset='utf-8'>
     <title>Docker Compose GUI</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
     <style>
       body {
         margin: 0;
         padding: 0;
       }
     </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="text/javascript" src="bundle.js"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="text/javascript" src="bundle.js"></script>
+</body>
+
 </html>
