--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta-charset='utf-8'>
-    <title>Docker Compose GUI</title>
+    <title>Spindocker</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
     <style>
